Refactor Registers.